--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "firebase": "^11.3.0",
     "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
-    "next": "^15.4.5",
-    "patch-package": "^8.0.0",
+    "next": "15.4.7",
+    "patch-package": "8.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
