--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "generate-icons": "node scripts/generate-icons.js",
+    "prebuild": "npm run generate-icons"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.0.4",
@@ -73,7 +75,9 @@
     "genkit-cli": "^1.0.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "next-pwa": "^5.6.0",
     "postcss": "^8",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
